# hb-proto-3

./: .gitignore  QUICK_START.md  README.md  start_services.sh  stop_services.sh
backend/: .env.example  Dockerfile  check_execution.py  docker-compose.observability.yml  docker-compose.yml  drop_tables_tmp.py  prometheus.yml  pyproject.toml  seed_db.py  seed_entities.py  trigger_only.py  verify_refactor_minimal.py
backend/migrations/: env.py
backend/migrations/versions/: 093ffa970086_add_pgvector_extension.py  09e4d21677b1_refactor_ai_models_to_hierarchical_.py  54b608877f40_add_unique_constraint_to_integration_.py  6fdc110c5698_add_model_name_to_ai_models.py  9bc12d4c6cc6_refactor_hierarchical_ai_platform_phase_.py  9bf859b51116_add_execution_id_to_usage_logs.py  a804c0db1551_refactor_costing_system.py  c3e80da7ca0a_remove_legacy_partner_and_tenant_tables.py  c830b1839465_refactor_to_company_and_hierarchical_.py  e3bbbefdc5b9_add_document_and_documentchunk_models_.py  f4bdb8730f25_rename_usage_log_metadata_to_log_.py  fd743ae4b9ee_initial_migration.py
backend/src/: main.py
backend/src/ai/: dag_validator.py  models.py  router.py  schemas.py  service.py  tool_executor.py  tools.py  usage_service.py  worker.py
backend/src/auth/: company_router.py  dependencies.py  models.py  profile_router.py  router.py  schemas.py  service.py  user_router.py
backend/tests/: test_dag_validator.py  test_gateway.py  test_phase1_gaps.py  test_phase3.py  test_phase4.py  test_tool_executor.py  verify_billing_cycle.py  verify_iam.py  verify_refactor.py  verify_tenant.py
(+124 files in other folders)
